fix z-index on text when zoomed

--- a/src/wmcads/patterns/hub-page-banner/_hub-page-banner.scss
+++ b/src/wmcads/patterns/hub-page-banner/_hub-page-banner.scss
@@ -9,6 +9,8 @@
 
   &__copy {
     max-width: 100%;
+    position: relative;
+    z-index: 999;
 
     h1 {
       margin-bottom: $size-md;
